apps/base/loki/middleware-external.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-push-auth
  namespace: loki
spec:
  basicAuth:
    secret: loki-push-auth
